Show on amazon.

--- a/popup.html
+++ b/popup.html
@@ -7,9 +7,17 @@
         width: 30px;
         outline: none;
       }
+      body {
+          width: 250px;
+          height: 300px;
+      }
+      .title {
+          font-size: 1rem;;
+      }
     </style>
   </head>
   <body>
+      <h1 class="title">Amazon Carbon Offset</h1>
     <button id="changeColor"></button>
     <script src="popup.js"></script>
   </body>
