--- a/popup.html
+++ b/popup.html
@@ -8,8 +8,11 @@
         outline: none;
       }
       body {
-          width: 250px;
-          height: 300px;
+        width: 250px;
+        height: 300px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
       }
       .title {
           font-size: 1rem;;
@@ -17,8 +20,8 @@
     </style>
   </head>
   <body>
-      <h1 class="title">Amazon Carbon Offset</h1>
-    <button id="changeColor"></button>
+    <h1 class="title">Amazon Carbon Offset</h1>
+    <button id="calculate">Calculate</button>
     <script src="popup.js"></script>
   </body>
 </html>
