--- a/options.html
+++ b/options.html
@@ -2,19 +2,13 @@
 <html>
   <head>
     <style>
-      button {
-        height: 30px;
-        width: 30px;
-        outline: none;
-        margin: 10px;
-      }
     </style>
   </head>
   <body>
-    <div id="buttonDiv">
-    </div>
     <div>
-      <p>Choose a different background color!</p>
+      <h1>Your Basket</h1>
+    </div>
+    <div id="products">
     </div>
   </body>
   <script src="options.js"></script>
