--- a/options.html
+++ b/options.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="jquery-3.2.1.slim.min.js"></script>
+    <script src="popper.min.js"></script>
+    <script src="bootstrap.min.js"></script>
+    
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght=400;500;600;700&display=swap" rel="stylesheet">
+    <script src="ed3998fccc.js"></script>
+
     <style>
     </style>
   </head>
   <body>
-    <div>
+    <div class="container">
       <h1>Your Basket</h1>
-    </div>
-    <div id="products">
+      <div id="products"></div>
     </div>
   </body>
   <script src="options.js"></script>
