--- a/popup.html
+++ b/popup.html
@@ -31,12 +31,12 @@
   <body>
     <div id="details" class="container-fluid">
 
-        <h1 class="title text-center mt-3 mb-3"><i class="fas fa-recycle"></i>&nbsp;ReCommerce&nbsp;<i class="fas fa-globe-americas"></i></h1>
+        <h1 class="title text-center my-3"><i class="fas fa-recycle"></i>&nbsp;ReCommerce&nbsp;<i class="fas fa-globe-americas"></i></h1>
         <p class="lead text-center"><span class="d-inline-block text-truncate" style="max-width: 250px;" id="product"></span></p>
 
-        <p id="weight"></p>
-        <p id="dimensions"></p>
-        <table class="table">
+        <!-- <p id="weight"></p>
+        <p id="dimensions"></p> -->
+        <table class="table mb-4">
             <tbody>
                 <tr>
                     <th scope="row">Materials</th>
@@ -56,11 +56,9 @@
                 </tr>
             </tbody>
         </table>
-        <!-- <p id="packaging"></p>
-        <p id="transport"></p> -->
         <div class="d-flex flex-column align-items-center">
-            <p><small>These emissions are equivalent to:</small></p>
-            <p id="emissions-icons" class="text-center">
+            <p class="mb-1"><small>These emissions are equivalent to:</small></p>
+            <p id="emissions-icons" class="text-center mb-4">
                 <span class="badge badge-light shadow-sm bg-white rounded">
                     <span id="cars"></span>&nbsp;mi&nbsp; &#128663;
                 </span>
