--- a/popup.html
+++ b/popup.html
@@ -69,7 +69,7 @@
                     <span id="bulb"></span>&nbsp;hr&nbsp;&#128161;
                 </span>
             </p>
-            <button type="button" class="btn btn-info btn-sm mb-3" id="optionsBtn">Open Basket</button>
+            <button type="button" class="btn btn-info btn-sm mb-3" id="optionsBtn">Open Dashboard</button>
         </div>
         
     </div>
