--- a/popup.html
+++ b/popup.html
@@ -98,7 +98,7 @@
                     <th class="emission-subsection" scope="row">
                       <div class="csstooltip">
                         Packaging
-                        <span class="csstooltiptext">Reduce this by buying local and using recycled paper</span>
+                        <span class="csstooltiptext">Reduce this by buying local and using recycled paper products</span>
                       </div>
                     </th>
                     <td class="emission-subsection-value" id="packaging"></td>
